--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,24 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".CamaraNuevoRegistroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UbicacionNuevoRegistroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SeleccionarNuevoRegistroActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".FichaTecnicaFloraActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".FichaTecnicaFaunaActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".FichaTecnicaCaracEntornoActivity"
+            android:exported="true"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -30,6 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
