--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
@@ -24,6 +23,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GeoNaturaAPP"
         tools:targetApi="31">
+        <activity
+            android:name=".MostrarRegistrosCaracEntornoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MostrarRegistrosFaunaActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.actions"
@@ -44,7 +49,7 @@
             android:value="AIzaSyBttuSDGau025Afi8CPwWVEoztu_EWiYRA" />
 
         <activity
-            android:name=".MostrarRegistrosActivity"
+            android:name=".MostrarRegistrosFloraActivity"
             android:exported="false" />
         <activity
             android:name=".SeleccionarVerRegistros"
